saving the model

--- a/fashion_mnist_gan.ipynb
+++ b/fashion_mnist_gan.ipynb
@@ -282,6 +282,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gan.save(\"fashion_mnist_gan.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
