--- a/tom_mitchell/Artificial Neural Networks/face_direction.ipynb
+++ b/tom_mitchell/Artificial Neural Networks/face_direction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,12 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Function:\n",
-    "    pass\n",
+    "\n",
+    "    def __call__(self, x):\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "    def derivative(self, x):\n",
+    "        raise NotImplementedError\n",
     "\n",
     "class IdentityFunction(Function):\n",
     "\n",
@@ -183,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +264,6 @@
     "        value = self.apply(instance)\n",
     "\n",
     "        self._error = self._function.derivative(value) * (target - value)\n",
-    "        #self._error =  value * (1 - value) * (target - value) \n",
     "        return self._error\n",
     "    \n",
     "    def update_weights(self, instance, target):\n",
@@ -269,16 +273,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Layer:\n",
     "\n",
     "    def __init__(self, no_previous_nodes, no_nodes, function = IdentityFunction(), lr = 0.03, name = 'Layer'):\n",
-    "        self._nodes = [None] * no_nodes\n",
-    "        for i in range(no_nodes):\n",
-    "            self._nodes[i] = Node(no_previous_nodes, function, lr)\n",
+    "        self._nodes = [Node(no_previous_nodes, function, lr) for _ in range(no_nodes)]\n",
     "\n",
     "        self._next_layer = None\n",
     "        self._no_weights = no_previous_nodes\n",
@@ -354,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,9 +379,7 @@
     "    def __init__(self, no_nodes, function = IdentityFunction(), lr = 0.03, no_previous_nodes = 0, name = 'Output'):\n",
     "        super().__init__(no_previous_nodes, no_nodes, function, lr, name)\n",
     "\n",
-    "        self._nodes = [None] * no_nodes\n",
-    "        for i in range(no_nodes):\n",
-    "            self._nodes[i] = OutputNode(no_previous_nodes, function, lr)\n",
+    "        self._nodes = [OutputNode(no_previous_nodes, function, lr) for _ in range(no_nodes)]\n",
     "    \n",
     "    def reset_error(self):\n",
     "        self._errors = None\n",
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
     "        \n",
     "        return current_layer.get_weights()\n",
     "    \n",
-    "    def updateWeightsModel(self, instance, target):\n",
+    "    def update_weights_model(self, instance, target):\n",
     "        layer = self.__first_layer.get_next_layer()\n",
     "\n",
     "        inputs = [instance]\n",
@@ -504,7 +504,7 @@
     "        epochs_list = []\n",
     "        for i in range(self.__epochs):\n",
     "            for instance, target in zip(instances, targets):\n",
-    "                self.updateWeightsModel(instance, target)\n",
+    "                self.update_weights_model(instance, target)\n",
     "\n",
     "                self.reset_error()\n",
     "\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "1.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "0.920863309352518"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "0.9230769230769231"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
