--- a/tom_mitchell/Genetic Algorithms/play_tennis.ipynb
+++ b/tom_mitchell/Genetic Algorithms/play_tennis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,9 @@
     "        contor = 1\n",
     "        while self.__metric() > self.__threshold:\n",
     "            self.__step()\n",
-    "            print(str(contor) + \" \" + str(self.__metric())) \n",
+    "            \n",
+    "            if contor % 100 == 0:\n",
+    "                print(str(contor) + \" \" + str(self.__metric())) \n",
     "            contor += 1\n",
     "        \n",
     "        return self.__best_hypothesis()"
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,21 +251,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "index 15 is out of bounds for axis 0 with size 15",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[274], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m fitness \u001b[39m=\u001b[39m Fitness(instances \u001b[39m=\u001b[39m train_instances, targets \u001b[39m=\u001b[39m train_targets)\n\u001b[1;32m      2\u001b[0m ga \u001b[39m=\u001b[39m GA(length \u001b[39m=\u001b[39m REPRESENTATION_LENGTH, fitness \u001b[39m=\u001b[39m fitness)\n\u001b[0;32m----> 4\u001b[0m hypothesis \u001b[39m=\u001b[39m ga\u001b[39m.\u001b[39;49mlearn()\n",
-      "Cell \u001b[0;32mIn[272], line 124\u001b[0m, in \u001b[0;36mGA.learn\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    122\u001b[0m contor \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    123\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__metric() \u001b[39m>\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__threshold:\n\u001b[0;32m--> 124\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__step()\n\u001b[1;32m    125\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mstr\u001b[39m(contor) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__metric())) \n\u001b[1;32m    126\u001b[0m     contor \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "Cell \u001b[0;32mIn[272], line 116\u001b[0m, in \u001b[0;36mGA.__step\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    113\u001b[0m probabilities \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__probabilities()\n\u001b[1;32m    114\u001b[0m ps \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__select_from_current(probabilities)\n\u001b[0;32m--> 116\u001b[0m ps\u001b[39m.\u001b[39mextend(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__select_pairs(probabilities))\n\u001b[1;32m    117\u001b[0m ps\u001b[39m.\u001b[39mextend(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__sample_hypothesis(probabilities, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__p \u001b[39m-\u001b[39m \u001b[39mlen\u001b[39m(ps)))\n\u001b[1;32m    119\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__hypothesis \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__mutate_hypothesis(ps)\n",
-      "Cell \u001b[0;32mIn[272], line 79\u001b[0m, in \u001b[0;36mGA.__select_pairs\u001b[0;34m(self, probabilities)\u001b[0m\n\u001b[1;32m     76\u001b[0m crossovers \u001b[39m=\u001b[39m []\n\u001b[1;32m     78\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m, number, \u001b[39m2\u001b[39m):\n\u001b[0;32m---> 79\u001b[0m     crossovers\u001b[39m.\u001b[39mextend(GA\u001b[39m.\u001b[39m__crossover(hypothesis1 \u001b[39m=\u001b[39m hypothesis[i], hypothesis2 \u001b[39m=\u001b[39m hypothesis[i \u001b[39m+\u001b[39;49m \u001b[39m1\u001b[39;49m]))\n\u001b[1;32m     81\u001b[0m \u001b[39mreturn\u001b[39;00m crossovers\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 15 is out of bounds for axis 0 with size 15"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 0.6428571428571429\n",
+      "200 0.6428571428571429\n",
+      "300 0.35714285714285715\n",
+      "400 0.35714285714285715\n",
+      "500 0.42857142857142855\n",
+      "600 0.35714285714285715\n",
+      "700 0.35714285714285715\n",
+      "800 0.35714285714285715\n",
+      "900 0.35714285714285715\n",
+      "1000 0.35714285714285715\n",
+      "1100 0.35714285714285715\n",
+      "1200 0.6428571428571429\n",
+      "1300 0.5\n"
      ]
     }
    ],
@@ -276,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +292,7 @@
        "1"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 365,
      "metadata": {},
      "output_type": "execute_result"
     }
